--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-dark-mode": "^1.1.0",
-    "gatsby-plugin-google-analytics": "^2.1.17",
-    "gatsby-plugin-manifest": "^2.2.18",
+    "gatsby-plugin-google-analytics": "^2.1.24",
+    "gatsby-plugin-manifest": "^2.2.26",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.1.6",
-    "gatsby-plugin-offline": "^3.0.8",
+    "gatsby-plugin-offline": "^3.0.18",
     "gatsby-plugin-purgecss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-sharp": "^2.2.36",
     "gatsby-plugin-sitemap": "^2.2.14",
-    "gatsby-plugin-styled-components": "^3.1.9",
+    "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-copy-linked-files": "^2.0.7",
-    "gatsby-remark-images": "^3.1.6",
+    "gatsby-remark-copy-linked-files": "^2.1.28",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "^3.1.29",
     "gatsby-remark-relative-images": "^0.2.1",
-    "gatsby-source-filesystem": "^2.0.26",
-    "gatsby-transformer-remark": "^2.6.9",
-    "gatsby-transformer-sharp": "^2.1.9",
+    "gatsby-remark-relative-links": "0.0.3",
+    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.32",
+    "gatsby-transformer-sharp": "^2.3.2",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.9.6",
@@ -42,7 +44,7 @@
     "react-images": "^1.0.0",
     "react-photo-gallery": "^8.0.0",
     "smooth-scroll": "^16.1.0",
-    "styled-components": "^4.4.0",
+    "styled-components": "^4.4.1",
     "typeface-francois-one": "0.0.71",
     "uuid": "^3.2.1"
   },
