--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,9 @@
 [build.environment]
   YARN_VERSION = "1.9.4"
   YARN_FLAGS = "--no-ignore-optional"
+  
+ [[redirects]]
+ from = "/gallery4/cogar-rain-man/9480"
+  to = "/galleries/ghosttowns"
+  status = 301
+  force = false
